--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,6 @@
-Flask==3.0.0
-Flask-Sock==0.7.0
-psutil==5.9.8
-requests==2.31.0
-simple-websocket==1.0.0
-urllib3==2.1.0
-Werkzeug==3.0.1
-wsproto==1.2.0
-python-dotenv==1.0.0
-certifi==2023.11.17
-charset-normalizer==3.3.2
-click==8.1.7
-h11==0.14.0
-idna==3.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.3
+Flask>=2.0.0
+psutil>=5.8.0
+requests>=2.26.0
+urllib3>=1.26.0
+Werkzeug>=2.0.0
+python-dateutil>=2.8.2
